--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.4.17",
+    "moment": "^2.29.1",
+    "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "^3.4.4",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
